Implement auth Change service template to auth service Fix issues with lombok processing Add tests
